# Dashcam

./: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.esp32cam
components/camera_components/include/: camera_config.h
components/esp32-camera/driver/: sccb-ng.c
main/: CMakeLists.txt  camera_init.c  camera_init.h  connect_wifi.c  connect_wifi.h  idf_component.yml  main.c  temp_sensor.c  temp_sensor.h  web_server.c  web_server.h
src/: CMakeLists.txt  camera.c  camera.h  camera_config.h  main.c  web_server.c  web_server.h  wifi.c  wifi.h
